--- a/TrackEditor/EditStuntWidget.ui
+++ b/TrackEditor/EditStuntWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>362</height>
+    <height>538</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,14 +40,31 @@
         <x>0</x>
         <y>0</y>
         <width>398</width>
-        <height>360</height>
+        <height>536</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout">
+       <item row="2" column="0">
+        <widget class="QLabel" name="lblNumTicks">
+         <property name="text">
+          <string>Num ticks</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="lblChunkCount">
+         <property name="toolTip">
+          <string>Increases the length and height of the &quot;ramp&quot;. 1 is a bump, 4 starts breaking textures, 6 is huge vertical wall</string>
+         </property>
+         <property name="text">
+          <string>Ramp chunk count</string>
+         </property>
+        </widget>
+       </item>
        <item row="6" column="1">
         <widget class="QSpinBox" name="sbTimeBulging">
          <property name="minimum">
-          <number>-65535</number>
+          <number>0</number>
          </property>
          <property name="maximum">
           <number>65535</number>
@@ -57,23 +74,10 @@
          </property>
         </widget>
        </item>
-       <item row="8" column="1">
-        <widget class="QSpinBox" name="sbExpandContract">
+       <item row="2" column="1">
+        <widget class="QSpinBox" name="sbNumTicks">
          <property name="minimum">
-          <number>-65535</number>
-         </property>
-         <property name="maximum">
-          <number>65535</number>
-         </property>
-         <property name="singleStep">
-          <number>1</number>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="1">
-        <widget class="QSpinBox" name="sbTimeFlat">
-         <property name="minimum">
-          <number>-65535</number>
+          <number>0</number>
          </property>
          <property name="maximum">
           <number>65535</number>
@@ -84,90 +88,83 @@
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QSpinBox" name="sbUnk">
+        <widget class="QSpinBox" name="sbTickStartIdx">
          <property name="minimum">
-          <number>-65535</number>
+          <number>0</number>
          </property>
          <property name="maximum">
           <number>65535</number>
          </property>
          <property name="singleStep">
           <number>1</number>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QSpinBox" name="sbChunkCount">
+         <property name="minimum">
+          <number>0</number>
+         </property>
+         <property name="maximum">
+          <number>65535</number>
+         </property>
+         <property name="singleStep">
+          <number>1</number>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="lblTickStartIdx">
+         <property name="text">
+          <string>Tick start index</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="0">
+        <widget class="QLabel" name="lblLength">
+         <property name="text">
+          <string>Ramp chunk length</string>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="1">
+        <widget class="QCheckBox" name="ck0LShoulder">
+         <property name="text">
+          <string>Left Shoulder</string>
          </property>
         </widget>
        </item>
        <item row="4" column="0">
         <widget class="QLabel" name="lblTimingGroup">
          <property name="text">
-          <string>Timing Group</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
-        <widget class="QSpinBox" name="sbTimingGroup">
-         <property name="minimum">
-          <number>-65535</number>
-         </property>
-         <property name="maximum">
-          <number>65535</number>
-         </property>
-         <property name="singleStep">
-          <number>1</number>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="0">
-        <widget class="QLabel" name="lblExpandContract">
-         <property name="text">
-          <string>Smaller Expands Larger Contracts</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="0">
-        <widget class="QLabel" name="lblTimeFlat">
-         <property name="text">
-          <string>Time Flat</string>
+          <string>Timing group</string>
          </property>
         </widget>
        </item>
        <item row="5" column="0">
         <widget class="QLabel" name="lblHeight">
          <property name="text">
-          <string>Height</string>
+          <string>Height delta per tick</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="lblUnk">
+       <item row="11" column="1">
+        <widget class="QCheckBox" name="ck2LLane">
          <property name="text">
-          <string>Unknown</string>
+          <string>Left Lane</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
-        <widget class="QLabel" name="lblTimeBulging">
-         <property name="text">
-          <string>Time Bulging</string>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="1">
-        <widget class="QSpinBox" name="sbBulge">
+       <item row="7" column="1">
+        <widget class="QSpinBox" name="sbTimeFlat">
          <property name="minimum">
-          <number>-65535</number>
+          <number>0</number>
          </property>
          <property name="maximum">
           <number>65535</number>
          </property>
          <property name="singleStep">
           <number>1</number>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="0">
-        <widget class="QLabel" name="lblBulge">
-         <property name="text">
-          <string>Bulge</string>
          </property>
         </widget>
        </item>
@@ -184,14 +181,108 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="lblAngle">
-         <property name="text">
-          <string>Angle</string>
+       <item row="9" column="1">
+        <widget class="QLineEdit" name="leFlags">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="0" column="0" colspan="2">
+       <item row="14" column="0">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="7" column="0">
+        <widget class="QLabel" name="lblTimeFlat">
+         <property name="text">
+          <string>Time flat</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QLabel" name="lblTimeBulging">
+         <property name="text">
+          <string>Time bulging</string>
+         </property>
+        </widget>
+       </item>
+       <item row="12" column="1">
+        <widget class="QCheckBox" name="ck1LWall">
+         <property name="text">
+          <string>Left Wall</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0">
+        <widget class="QLabel" name="lblFlags">
+         <property name="text">
+          <string>Rising Sections</string>
+         </property>
+        </widget>
+       </item>
+       <item row="12" column="0">
+        <widget class="QCheckBox" name="ck5RWall">
+         <property name="text">
+          <string>Right Wall</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QSpinBox" name="sbTimingGroup">
+         <property name="minimum">
+          <number>0</number>
+         </property>
+         <property name="maximum">
+          <number>65535</number>
+         </property>
+         <property name="singleStep">
+          <number>1</number>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QSlider" name="sldLength">
+         <property name="minimum">
+          <number>0</number>
+         </property>
+         <property name="maximum">
+          <number>150</number>
+         </property>
+         <property name="value">
+          <number>100</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="0">
+        <widget class="QCheckBox" name="ck4RShoulder">
+         <property name="text">
+          <string>Right Shoulder</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="2">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>100%</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="3">
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QPushButton" name="pbStunt">
@@ -215,54 +306,12 @@
          </item>
         </layout>
        </item>
-       <item row="2" column="1">
-        <widget class="QSpinBox" name="sbAngle">
-         <property name="minimum">
-          <number>-65535</number>
-         </property>
-         <property name="maximum">
-          <number>65535</number>
-         </property>
-         <property name="singleStep">
-          <number>1</number>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QSpinBox" name="sbScaleFact">
-         <property name="minimum">
-          <number>-65535</number>
-         </property>
-         <property name="maximum">
-          <number>65535</number>
-         </property>
-         <property name="singleStep">
-          <number>1</number>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="lblScaleFact">
-         <property name="toolTip">
-          <string>Increases the length and height of the &quot;ramp&quot;. 1 is a bump, 4 starts breaking textures, 6 is huge vertical wall</string>
-         </property>
+       <item row="11" column="0">
+        <widget class="QCheckBox" name="ck3RLane">
          <property name="text">
-          <string>Scale Factor</string>
+          <string>Right Lane</string>
          </property>
         </widget>
-       </item>
-       <item row="10" column="0">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
